--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,5 +2,5 @@ NODE_ENV=development
 PORT=3939
 JWT_SECRET=supersecret
 JWT_EXPIRATION_MINUTES=15
-MONGO_URI=mongodb://mongodb:27017/express-rest-es2017-boilerplate
-MONGO_URI_TESTS=mongodb://mongodb:27017/express-rest-es2017-boilerplate
+MONGO_URI=mongodb://mongodb:27017/test
+MONGO_URI_TESTS=mongodb://mongodb:27017/test
