--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/index.js",
-    "test": "jest --forceExit"
+    "test": "jest --forceExit",
+    "start": "cross-env NODE_ENV=production pm2 start ./src/index.js",
+    "stop": "pm2 stop ./src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -23,10 +25,12 @@
     "mongoose": "^7.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "pm2": "^5.3.0",
     "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^29.5.0",
     "supertest": "^6.3.3"
   }
